@@ -304,9 +304,6 @@
      </item>
      <item>
       <widget class="QPushButton" name="ButtonDownload">
-       <property name="enabled">
-        <bool>false</bool>
-       </property>
        <property name="text">
         <string>Download...</string>
        </property>
