@@ -1,3 +1,4 @@
 - FIXED: the "merge keywords" option doesn't seem to work when updating a TB. Old keywords looks lost
 - FIXED: Cursor is not visible in the Keywords field when editing a TB
 - MainWindow.cpp, line 384. contains() highlighted for a warning
+- FIXED: The download sub-menu doesn't offer anything in the DlgTB windows, while it should display at least PDF + CTI
