@@ -142,3 +142,7 @@
 - added the ability to download Technical Bulletin and Customer Technical Information files
 - renamed some Windows Registry keys
 - automatically clean some old keys (once per application run)
+
+25/02/2024
+- Fixed the DL sub-menu not offering to download TB PDF/CTI
+- Fixed the DL sub-menu offering to download TB PDF/CTI even if there is no  RK number
